# vibe-plus

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REVIEW.md  package.json  tsconfig.json
.claude/: launch.json
.github/scripts/: test-windows-cli.ps1
.github/workflows/: pages.yml  release.yml  windows-cli.yml
apps/desktop/: Cargo.toml  Info.plist  build.rs  entitlements.plist
apps/desktop/src/: embedded.rs  main.rs  ui_assets.rs  ui_updater.rs
apps/lander/: index.html  package.json  tsconfig.json  vite.config.ts
apps/lander/src/: App.vue  main.ts
apps/web/: components.json  index.html  package.json  tailwind-iconify.ts  tsconfig.json  uno-icons.ts  uno.config.ts  vite.config.ts
apps/web/e2e/: mock-123-scheduler.mjs  providers-performance.mjs
apps/web/public/: 404.html
apps/web/src/: env.d.ts  main.ts  router.ts  vitest.d.ts
apps/web/src/components/: brand-wordmark.vue
apps/web/src/dashboard/: App.vue  compat.ts  i18n.ts  main.ts
apps/web/src/dashboard/api/: client.test.ts  client.ts  intake-types.ts
apps/web/src/dashboard/assets/: global.css  tailwind.css
apps/web/src/dashboard/components/: ClientTakeoverCard.vue  SmartIntake.vue  UsageRing.vue  intake-loot-animation.vue  intake-wizard.vue  logs-panel.vue  network-panel.vue  provider-card.vue  provider-credential-row.vue  provider-editor-modal.vue  provider-import-modal.vue  provider-logo.vue  provider-smart-modal.vue  route-editor-panel.vue  vp-icon.vue
apps/web/src/dashboard/composables/: use-brand-logo.ts  use-codex-gateway-settings.ts  use-intake-flow.ts  use-live-workspace-activity.ts  use-smart-intake.ts  use-ui-language.ts  use-web-compatibility.ts  useProxy.ts  useRealtimeStream.ts
apps/web/src/dashboard/lib/: entity-links.test.ts  entity-links.ts
apps/web/src/dashboard/pages/: Monitor.vue  Observability.vue  Overview.vue  Providers.vue  Routes.vue  Settings.vue  Usage.vue
apps/web/src/lander/: HeroChatDemo.vue  LanderPage.vue  WaveRoutingDemo.vue
apps/web/src/lib/: brand.ts  cdn-probe.ts  page-title.ts
apps/website/: env.d.ts  index.html  package.json  tsconfig.json  uno-icons.ts  uno.config.ts  vite.config.ts
apps/website/src/: App.vue  main.ts  router.ts
apps/website/src/api/: client.ts
apps/website/src/assets/: global.css
apps/website/src/components/: ClientTakeoverCard.vue  SmartIntake.vue  codex-history-unifier.vue  provider-card.vue  provider-credential-row.vue  vp-icon.vue
apps/website/src/composables/: use-smart-intake.ts  useProxy.ts
apps/website/src/pages/: Dashboard.vue  Logs.vue  Providers.vue  Providers.vue.bak  Routes.vue  Settings.vue  Usage.vue
apps/website/src/utils/: client-tools.ts  codex-oauth-hints.ts  page-accent.ts  provider-display.ts  providers-display.ts  vibe-config-defaults.ts
crates/vibe/: Cargo.toml
crates/vibe-core/: Cargo.toml
crates/vibe-core/embedded/ui/: index.html
crates/vibe-core/src/: auth_fingerprint.rs  cache.rs  circuit_breaker.rs  claude_control.rs  claude_summary.rs  codex_auth_json.rs  codex_config.rs  codex_history.rs  codex_plan_headers.rs  codex_session_usage.rs  codex_summary.rs  codex_upstream_ws.rs  codex_visual.rs  codex_wham_usage.rs  config.rs  diagnostics.rs  embedded.rs  forward.rs  gateway_maintenance.rs  intake.rs  lib.rs  local_import.rs  model_defaults.rs  oauth_identity.rs  paths.rs  provider_import.rs  router.rs  secrets.rs  server.rs  state.rs  stream_trace.rs  takeover.rs  transforms.rs  usage.rs  ws.rs
crates/vibe-core/src/ccswitch/: convert.rs  db.rs  extract.rs  mod.rs  paths.rs  redact.rs  settings.rs  types.rs
crates/vibe-core/src/forward/: mod.rs  outcome.rs  race.rs  selector.rs
crates/vibe-core/src/intake/: remote.rs
crates/vibe-core/src/providers/: anthropic.rs  gemini.rs  mod.rs  newapi.rs  openai.rs  sub2api.rs
crates/vibe-core/src/server/: clients.rs  codex_http.rs  codex_ws.rs  config.rs  dashboard.rs  fetch.rs  files.rs  import.rs  imports.rs  models.rs  providers.rs  proxy.rs  records.rs  routes.rs
crates/vibe-db/: Cargo.toml
crates/vibe-db/migrations/: 001_init.sql  002_health.sql  003_credentials.sql  004_oauth_credentials.sql  005_request_logs_extended.sql  006_plan_fingerprint.sql  007_request_log_bodies.sql  008_client_response_body.sql  009_oauth_identity_cache.sql  010_request_log_transport_headers.sql  011_request_log_stream_trace.sql  012_upstream_attempt_logs.sql  013_upstream_attempt_log_detail.sql  014_app_logs.sql  015_provider_protocols.sql  016_credential_models_and_balance.sql  017_upstream_provider_support.sql  018_route_forward_strategy.sql  019_drop_route_strategy.sql  020_drop_routes_table.sql  021_app_logs_events.sql  022_credential_disabled_reason.sql  023_upstream_attempt_wave.sql  024_usage_daily_rollups.sql  025_body_refs_and_short_log_prune.sql  026_request_log_cost_micros.sql  027_observability_thread_usage_quota.sql  028_upstream_attempt_network_target.sql  029_gateway_maintenance_tasks.sql
crates/vibe-db/src/: body_store.rs  dao.rs  gateway_maintenance.rs  lib.rs  maintenance.rs
crates/vibe-i18n/: Cargo.toml
crates/vibe-i18n/locales/en-US/: common.ftl
crates/vibe-i18n/locales/zh-CN/: common.ftl
crates/vibe-i18n/src/: lib.rs
crates/vibe-observability/: Cargo.toml
crates/vibe-observability/src/: db.rs  lib.rs
crates/vibe-plugin-api/: Cargo.toml
crates/vibe-plugin-api/src/: lib.rs
crates/vibe-protocol/: Cargo.toml
crates/vibe-protocol/src/: lib.rs
crates/vibe/src/: main.rs  npm_registry.rs
crates/vibe/src/cmd/: auto_update.rs  autostart.rs  ccswitch_extract.rs  client.rs  codex_history.rs  config.rs  daemon.rs  db.rs  doctor.rs  gateway.rs  install.rs  install_codex_app.rs  logs.rs  mcp.rs  mod.rs  observe.rs  pair.rs  provider.rs  route.rs  run.rs  start.rs  status.rs  statusline.rs  stop.rs  takeover.rs  ui.rs  up.rs  update.rs
crates/vibe/src/cmd/setup/: autostart_step.rs  ccswitch_import.rs  mod.rs
docs/: release.md
scripts/: bump-cli-version.mjs  bundle-mac.sh  check-hosted-ui-urls.mjs  rebuild-and-run-gateway.sh
tests/: e2e_blackbox_gateway.py  e2e_cli_takeover_mock.py
(+74 files in other folders)
