[workspace]
resolver = "2"
members = [
  "apps/desktop",
  "crates/vibe",
  "crates/vibe-core",
  "crates/vibe-db",
  "crates/vibe-protocol",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["cheezone <cheezone@163.com>"]
rust-version = "1.82"

[workspace.dependencies]
vibe-core = { path = "crates/vibe-core" }
vibe-db = { path = "crates/vibe-db" }
vibe-protocol = { path = "crates/vibe-protocol" }

# async runtime + http
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
  "json",
] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
http = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"

# cli + log
clap = { version = "4", features = ["derive", "env"] }
inquire = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# infra
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = "3"
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings", "serde-json-impl"] }
base64 = "0.22"
url = "2"
rand = "0.8"
png = "0.18"

# desktop shell
tao = "0.35"
tray-icon = "0.24"
wry = "0.55"
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = { version = "2", default-features = false, features = ["rev-mappings"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
