[package]
name = "vibe-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Vibe Plus disposable desktop shell."

[[bin]]
name = "vibe-app"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
tao = { workspace = true }
tray-icon = { workspace = true }
wry = { workspace = true }
