[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local API gateway core: server, providers, router, transforms."

[dependencies]
vibe-protocol = { workspace = true }
vibe-db = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
