[package]
name = "vibe-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Plugin API surface for Vibe Plus gateway events."

[dependencies]
vibe-protocol = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
