[package]
name = "vibe-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared protocol types between vibe core and clients."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }

[features]
default = []
ts-export = []

[[bin]]
name = "export-types"
path = "src/bin/export_types.rs"
