[package]
name = "vibe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "vibe-plus local API gateway CLI."

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
vibe-core = { workspace = true }
vibe-db = { workspace = true }
vibe-protocol = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { workspace = true }
toml_edit = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
